# ds-resource-plugin-py-lib

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  PyPI.md  README.md  codecov.yaml  pyproject.toml  setup-template.sh
.config/: coverage.ini  markdownlint.yaml  mypy.ini  pytest.ini  ruff.toml
.github/workflows/: build.yaml  ci.yaml  docs.yaml  lint.yaml  release.yaml  security.yaml
docs/: DATASET_CONTRACT.md  LINKED_SERVICE_CONTRACT.md  SERDE_CONTRACT.md
docs/source/: conf.py  index.rst
src/ds_common_{name}_py_lib/: __init__.py
src/ds_resource_plugin_py_lib/common/resource/: client.py  errors.py
src/ds_resource_plugin_py_lib/common/resource/dataset/: __init__.py  base.py  decorators.py  enums.py  errors.py  result.py  storage_format.py
src/ds_resource_plugin_py_lib/common/resource/linked_service/: __init__.py  base.py  enums.py  errors.py
src/ds_resource_plugin_py_lib/common/serde/: __init__.py  base.py  binary.py
src/ds_resource_plugin_py_lib/common/serde/deserialize/: awswrangler.py  base.py  pandas.py
src/ds_resource_plugin_py_lib/common/serde/serialize/: __init__.py  awswrangler.py  base.py  builtin.py  pandas.py
src/ds_resource_plugin_py_lib/libs/models/: serializable.py
src/ds_resource_plugin_py_lib/libs/utils/: __init__.py  import_string.py  json_default.py  sanitize.py
tests/: conftest.py
tests/common/: __init__.py
tests/common/resource/: __init__.py  test_resource_errors.py
tests/common/resource/client/: __init__.py  test_discovery.py  test_instance_creation.py  test_properties.py  test_sanitize_version.py  test_scan_resource_directory.py  test_serde_registration.py  test_singleton.py  test_version_differentiation.py  test_yaml_parsing.py
tests/common/resource/dataset/: test_dataset_base_abstracts.py  test_dataset_errors.py  test_dataset_info.py  test_dataset_inject.py
tests/common/resource/linked_service/: test_linked_service_base_abstracts.py  test_linked_service_errors.py  test_linked_service_info.py
tests/common/serde/: test_binary.py
tests/common/serde/deserialize/: test_awswrangler_deserializer.py  test_base_deserializer.py  test_pandas_deserializer.py
tests/common/serde/serialize/: test_awswrangler_serializer.py  test_base_serializer.py  test_pandas_serializer.py
tests/libs/models/: test_serializable.py
tests/libs/utils/: test_import_string.py  test_json_default.py
